<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_vertical_margin"
            >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/login_square"
        android:padding="25dp"
        >
        <TextView
            android:id="@+id/quick_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/my_padding_in_ten"
            android:text="@string/quick_login_text"
            android:textSize="@dimen/my_text_size"
            />
        <EditText
            android:id="@+id/quick_phone_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/quick_login_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/person"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="@dimen/my_padding_in_ten"
            />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:layout_below="@+id/quick_phone_edit"
            android:id="@+id/linear"
            >
            <EditText
                android:id="@+id/enter_ver_code_edit"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_back"
                android:layout_below="@+id/quick_phone_edit"
                android:hint="@string/enter_ver_code"
                android:paddingLeft="@dimen/my_padding_in_ten"
                android:paddingRight="@dimen/my_padding_in_ten"
                android:layout_marginRight="20dp"
                android:inputType="number"
                />
            <Button
                android:id="@+id/get_ver_code_button"
                android:layout_marginLeft="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/get_ver_code"
                />
        </LinearLayout>
        <Button
            android:id="@+id/quick_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="@dimen/my_text_size"
            android:background="@drawable/button_background"
            android:layout_below="@id/linear"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            />
    </RelativeLayout>

</RelativeLayout>