<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/fragment4_toolbar_button_bg"
    >

<android.support.v7.widget.Toolbar
    android:id="@+id/fragment4_toolbar_button_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    >

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment4_toolbar_button"
        android:singleLine="true"
        android:textColor="@color/tab_textcolor"
        android:textSize="20sp" />


</android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/fragment4_toolbar_button_essentialinformation"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
      android:background="@color/colorPrimary"
        ></View>
    <RelativeLayout
        android:id="@+id/fragment4_toolbar_button_headportrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/fragment_item_style"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment4_toolbar_button_headportrait"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            />
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/touxiang2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:riv_oval="true"
            app:riv_border_width="2dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            ></com.makeramen.roundedimageview.RoundedImageView>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        ></View>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment4_toolbar_button_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/fragment4_toolbar_button_more"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment4_toolbar_button_recycleview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    >
    <Button
        android:id="@+id/fragment4_exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment4_exit_button"
        android:background="@drawable/fragment4_exit_button"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        />

</LinearLayout>


</LinearLayout>