<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/loginBackgroundColor">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:layout_marginTop="@dimen/my_padding_in_ten"
        android:id="@+id/back_to"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/my_padding_in_ten"
        android:background="@drawable/login_square">
        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/my_padding_in_ten"
            android:text="@string/register_text"
            android:textSize="@dimen/my_text_size"
            />
        <!--用户名,手机号-->
        <EditText
            android:id="@+id/reg_phone_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/register_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/person"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="@dimen/my_padding_in_ten"
            />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/linear_reg"
            android:layout_below="@id/reg_phone_edit"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/my_padding_in_ten"
            >
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/edit_text_back"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="@dimen/my_padding_in_ten"
            android:hint="@string/enter_ver_code"
            android:id="@+id/reg_enter_ver_edit"
            android:inputType="number"
            />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/get_ver_code"
                android:id="@+id/reg_ver_button"
                android:layout_marginLeft="@dimen/my_padding_in_ten"
                />
        </LinearLayout>

        <!--密码-->
        <EditText
            android:id="@+id/reg_password_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/linear_reg"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="15dp"
            />
        <!--确认密码-->
        <EditText
            android:id="@+id/reg_confirm_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/reg_password_edit"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/keyimage"
            android:hint="@string/confirm_password_text"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="15dp"
            />
        <Button
            android:id="@+id/real_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/my_text_size"
            android:text="@string/register_text"
            android:background="@drawable/button_background"
            android:layout_below="@+id/reg_confirm_edit"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:padding="@dimen/my_padding_in_ten"
            />

    </RelativeLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />
</RelativeLayout>