<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/loginBackgroundColor"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:layout_marginTop="@dimen/my_padding_in_ten"
        android:id="@+id/forget_back_to"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_square"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="修改密码"
            android:layout_gravity="center"
            android:layout_margin="@dimen/my_padding_in_ten"
            />
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/login_square"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:background="@drawable/edit_text_back"
                android:hint="@string/enter_ver_code"
                android:paddingLeft="@dimen/my_padding_in_ten"
                android:id="@+id/forget_ver_edit"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/my_padding_in_ten"
                android:background="@drawable/button_background"
                android:textSize="20sp"
                android:text="@string/get_ver_code"
                android:id="@+id/foget_get_ver_code_button"
                />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/enter_password"
            android:background="@drawable/edit_text_back"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:id="@+id/foget_password_edit"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/confirm_password_text"
            android:background="@drawable/edit_text_back"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:id="@+id/forget_confirm"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="确认修改"
            android:textSize="@dimen/my_text_size"
            android:background="@drawable/button_background"
            android:id="@+id/update_button"
            />
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/forget_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />
</RelativeLayout>
