<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/login_square"
        android:padding="@dimen/my_padding_in_ten"
        >
        <!--标题头-->
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/my_padding_in_ten"
            android:text="@string/login_text"
            android:textSize="@dimen/my_text_size"
            />
        <!--用户名,手机号-->
        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/login_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/person"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="@dimen/my_padding_in_ten"
            />
        <!--密码-->
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/phone_edit"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:background="@drawable/edit_text_back"
            android:drawableRight="@drawable/password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/my_padding_in_ten"
            android:paddingRight="15dp"
            />
        <!--记住密码-->
        <CheckBox
            android:checked="true"
            android:id="@+id/remember_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/password_edit"
            android:layout_below="@+id/password_edit"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:text="下次自动登录"
            android:textSize="@dimen/my_text_size"
            />
        <!--忘记密码-->
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/password_edit"
            android:layout_below="@+id/password_edit"
            android:layout_margin="@dimen/my_padding_in_ten"
            android:text="忘记密码"
            android:textColor="@color/loginBackgroundColor"
            android:textSize="@dimen/my_text_size"
            />
        <!--登陆按钮-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/password_edit"
            android:layout_below="@+id/remember_check_box"
            android:layout_marginBottom="@dimen/my_padding_in_ten"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="@dimen/my_padding_in_ten"
            android:background="@drawable/button_background"
            android:text="@string/login_text"
            android:textSize="@dimen/my_text_size"
            />
        <!--注册按钮-->
        <Button
            android:id="@+id/reg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/password_edit"
            android:layout_below="@+id/remember_check_box"
            android:layout_marginBottom="@dimen/my_padding_in_ten"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/my_padding_in_ten"
            android:background="@drawable/button_background"
            android:text="@string/register_text"
            android:textSize="@dimen/my_text_size"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            />
    </RelativeLayout>
</RelativeLayout>