<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_ui_background"
    >
    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_ui_bar_background"
        android:paddingTop="@dimen/my_dp_five"
        >
        <TextView
            android:id="@+id/to_top"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="微评"
            android:textSize="20sp"
            android:padding="@dimen/my_dp_five"
            android:layout_marginBottom="@dimen/my_dp_five"
            android:textColor="@color/tool_bar_text_color"
            />
        <EditText
            android:id="@+id/search_edit"
            android:textColorHint="@color/color_gray"
            android:padding="@dimen/my_dp_five"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_search_edit_back"
            android:drawableRight="@drawable/search_icon"
            android:layout_marginBottom="@dimen/my_dp_five"
            android:focusable="false"
            android:clickable="true"
            android:hint="搜索"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            />
        <LinearLayout
            android:id="@+id/message_linear"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/message_icon"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="消息"
                android:textSize="10sp"
                android:gravity="center"
                android:textColor="@color/tool_bar_text_color"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/message_get_dot"
        android:layout_width="@dimen/padding_six_dp"
        android:layout_height="@dimen/padding_six_dp"
        android:background="@drawable/message_get_dot"
        android:layout_alignParentRight="true"
        android:layout_marginTop="34dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="3dp"
        />
    <FrameLayout
        android:layout_below="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/frame"
        >
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/banner_pager"
            ></android.support.v4.view.ViewPager>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="广告位出租"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/my_dp_five"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end|bottom"
            android:paddingRight="10dp"
            >
            <View
                android:layout_width="@dimen/my_dp_five"
                android:layout_height="@dimen/my_dp_five"
                android:background="@drawable/circle_image_dot_backgound"
                android:layout_margin="@dimen/my_dp_five"
                android:id="@+id/dot_1"
                />
            <View
                android:layout_width="@dimen/my_dp_five"
                android:layout_height="@dimen/my_dp_five"
                android:background="@drawable/circle_image_dot_backgound"
                android:layout_margin="@dimen/my_dp_five"
                android:id="@+id/dot_2"
                />
            <View
                android:layout_width="@dimen/my_dp_five"
                android:layout_height="@dimen/my_dp_five"
                android:background="@drawable/circle_image_dot_backgound"
                android:layout_margin="@dimen/my_dp_five"
                android:id="@+id/dot_3"
                />
            <View
                android:layout_width="@dimen/my_dp_five"
                android:layout_height="@dimen/my_dp_five"
                android:background="@drawable/circle_image_dot_backgound"
                android:layout_margin="@dimen/my_dp_five"
                android:id="@+id/dot_4"
                />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/frame"
        android:orientation="horizontal"
        android:id="@+id/linear_2"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/button1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_hot_button_back"
            android:text="@string/short_criticism_text"
            android:textSize="20sp"
            android:textColor="@color/color_gray"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_hot_button_back"
            android:text="@string/long_cirticims_text"
            android:textSize="20sp"
            android:textColor="@color/color_gray"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/search_movie_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_hot_button_back"
            android:text="@string/show_movie"
            android:textSize="20sp"
            android:textColor="@color/color_gray"
            />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swipe_refresh_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_2"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/load_more_progress"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/to_top_background"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/to_top_icon"
        android:paddingTop="10dp"
        android:id="@+id/top_image"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:id="@+id/run_to_critic_progress"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone"
        />
</RelativeLayout>

